# nibbles-clutter

./: Makefile  Makefile.in  README  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  libtool  shave  test3
blackjack/data/: Ameristar.rules  Atlantic_City.rules  Makefile  Makefile.am  Makefile.in  Vegas_Downtown.rules  Vegas_Strip.rules  blackjack.desktop  blackjack.desktop.in  blackjack.desktop.in.in  blackjack.schemas  blackjack.schemas.in
blackjack/src/: Makefile  Makefile.am  Makefile.in  blackjack  blackjack.cpp  blackjack.h  card.cpp  card.h  chips.cpp  chips.h  dialog.cpp  dialog.h  draw.cpp  draw.h  events.cpp  events.h  game.cpp  game.h  hand.cpp  hand.h  menu.cpp  menu.h  player.cpp  player.h  press_data.cpp  press_data.h  slot.cpp  slot.h  splash.cpp  splash.h  strategy.cpp  strategy.h
blackjack/src/.deps/: blackjack-blackjack.Po  blackjack-card.Po  blackjack-chips.Po  blackjack-dialog.Po  blackjack-draw.Po  blackjack-events.Po  blackjack-game.Po  blackjack-hand.Po  blackjack-menu.Po  blackjack-player.Po  blackjack-press_data.Po  blackjack-slot.Po  blackjack-splash.Po  blackjack-strategy.Po
dependencies/ggz-gtk/: Makefile  Makefile.am  Makefile.in  about.c  about.h  chat.c  chat.h  client.c  client.h  first.c  first.h  game.c  game.h  ggz-embed.h  ggz-gtk.h  ggzclient.c  ggzclient.h  launch.c  launch.h  login.c  login.h  motd.c  motd.h  msgbox.c  msgbox.h  pick_module.c  pick_module.h  playerinfo.c  playerinfo.h  playerlist.c  playerlist.h  props.c  props.h  roominfo.c  roominfo.h  roomlist.c  roomlist.h  server.c  server.h  support.c  (+8 more)
dependencies/ggz-gtk/.deps/: libggz_gtk_la-about.Plo  libggz_gtk_la-chat.Plo  libggz_gtk_la-client.Plo  libggz_gtk_la-first.Plo  libggz_gtk_la-game.Plo  libggz_gtk_la-ggzclient.Plo  libggz_gtk_la-launch.Plo  libggz_gtk_la-login.Plo  libggz_gtk_la-motd.Plo  libggz_gtk_la-msgbox.Plo  libggz_gtk_la-pick_module.Plo  libggz_gtk_la-playerinfo.Plo  libggz_gtk_la-playerlist.Plo  libggz_gtk_la-props.Plo  libggz_gtk_la-roominfo.Plo  libggz_gtk_la-roomlist.Plo  libggz_gtk_la-server.Plo  libggz_gtk_la-support.Plo  libggz_gtk_la-tablelist.Plo  libggz_gtk_la-types.Plo  libggz_gtk_la-xtext.Plo
dependencies/ggz-gtk/glade/: about.glade  first.glade  info.glade  launch.glade  license.glade  login.glade  main.glade  motd.glade  props.glade  types.glade
gnect/data/: Makefile  Makefile.am  Makefile.in  connectx.protocol  gnect-client.dsc  gnect-client.dsc.in  gnect-server.dsc.in  gnect.desktop  gnect.desktop.in  gnect.desktop.in.in  gnect.room.in  gnect.schemas  gnect.schemas.in
gnect/src/: Makefile  Makefile.am  Makefile.in  connect4.c  connectx_client.c  connectx_client.h  gfx.c  ggz-network.c  ggz-network.h  gnect  heurist.c  main.c  prefs.c  server.c  server.h  theme.c
gnect/src/.deps/: gnect-adjmtrx.Po  gnect-bintree.Po  gnect-connect4.Po  gnect-connectx_client.Po  gnect-evaluate.Po  gnect-gfx.Po  gnect-ggz-network.Po  gnect-heurist.Po  gnect-ia_main.Po  gnect-main.Po  gnect-pbsolver.Po  gnect-playgame.Po  gnect-prefs.Po  gnect-theme.Po
gtali/: ChangeLog.old  HACKING  INSTALL  Makefile  Makefile.am  Makefile.in  README  clist.c  gtali  gtali.desktop  gtali.desktop.in  gtali.desktop.in.in  gtali.schemas  gtali.schemas.in  gyahtzee.c  setup.c  yahtzee.c
gtali/.deps/: gtali-clist.Po  gtali-computer.Po  gtali-gyahtzee.Po  gtali-setup.Po  gtali-yahtzee.Po
gtali/help/: ChangeLog.old  Makefile  Makefile.am  Makefile.in  gtali-C.omf  gtali-ca.omf  gtali-de.omf  gtali-el.omf  gtali-en_GB.omf  gtali-es.omf  gtali-eu.omf  gtali-fr.omf  gtali-it.omf  gtali-oc.omf  gtali-pt_BR.omf  gtali-sv.omf  gtali.omf.in
gtali/help/C/: gtali.xml
gtali/help/ca/: .xml2po.mo  ca.po  gtali.xml
gtali/help/de/: .xml2po.mo  de.po  gtali.xml
gtali/help/el/: .xml2po.mo  el.po  gtali.xml
gtali/help/en_GB/: .xml2po.mo  en_GB.po  gtali.xml
gtali/help/es/: .xml2po.mo  es.po  gtali.xml
gtali/help/eu/: .xml2po.mo  eu.po  gtali.xml
gtali/help/fr/: .xml2po.mo  fr.po  gtali.xml
gtali/help/it/: .xml2po.mo  gtali.xml  it.po
gtali/help/oc/: .xml2po.mo  gtali.xml  oc.po
gtali/help/pt_BR/: .xml2po.mo  gtali.xml  pt_BR.po
gtali/help/sv/: .xml2po.mo  gtali.xml  sv.po
gtali/pix/: Makefile  Makefile.am  Makefile.in
icons/: Makefile  Makefile.am  Makefile.in
lightsoff/: Makefile  Makefile.am  Makefile.in  arrow.js  arrow.js.in  board.js  light.js  light.js.in  lightsoff  lightsoff.desktop.in  lightsoff.desktop.in.in  lightsoff.in  main.js  main.js.in  score.js  score.js.in
mahjongg/: ChangeLog.old  Makefile  Makefile.am  Makefile.in  drawing.c  get_titles.pl  mahjongg  mahjongg.c  mahjongg.desktop  mahjongg.desktop.in  mahjongg.desktop.in.in  mahjongg.h  mahjongg.schemas.in  maps.c  maps.h  solubility.c  solubility.h
mahjongg/.deps/: mahjongg-drawing.Po  mahjongg-mahjongg.Po  mahjongg-maps.Po  mahjongg-solubility.Po
mahjongg/help/: Makefile  Makefile.am  Makefile.in  mahjongg-C.omf  mahjongg-ca.omf  mahjongg-de.omf  mahjongg-el.omf  mahjongg-en_GB.omf  mahjongg-es.omf  mahjongg-eu.omf  mahjongg-fr.omf  mahjongg-it.omf  mahjongg-oc.omf  mahjongg-sv.omf
mahjongg/help/C/: mahjongg.xml
mahjongg/help/ca/: .xml2po.mo  ca.po  mahjongg.xml
mahjongg/help/de/: .xml2po.mo  de.po  mahjongg.xml
mahjongg/help/el/: .xml2po.mo  el.po  mahjongg.xml
same-gnome/: ChangeLog.old  ChangeLog.reallyold  FEATURES  Makefile  Makefile.am  Makefile.in  README  drawing.c  drawing.h  game.c  game.h  input.c  input.h  same-gnome  same-gnome.c  same-gnome.desktop  same-gnome.desktop.in  same-gnome.desktop.in.in  same-gnome.h  same-gnome.schemas  same-gnome.schemas.in  ui.c  ui.h
same-gnome/.deps/: same_gnome-drawing.Po  same_gnome-game.Po  same_gnome-input.Po  same_gnome-same-gnome.Po  same_gnome-ui.Po
same-gnome/help/: Makefile  Makefile.am  Makefile.in  same-gnome-C.omf  same-gnome-ca.omf  same-gnome-de.omf  same-gnome-en_GB.omf  same-gnome-es.omf  same-gnome-eu.omf  same-gnome-fr.omf  same-gnome-it.omf  same-gnome-oc.omf  same-gnome-ru.omf  same-gnome-sv.omf
tests/libgames-support/: Makefile  Makefile.am  Makefile.in  test-libgames-support.c
(+843 files in other folders)
