NULL =

icons_16 = \
	16x16/gnome-aisleriot.png \
	16x16/gnome-blackjack.png \
	16x16/gnome-freecell.png \
	16x16/gnome-glchess.png \
	16x16/gnome-glines.png \
	16x16/gnome-gnect.png \
	16x16/gnome-gnibbles.png \
	16x16/gnome-gnometris.png \
	16x16/gnome-iagno.png \
	16x16/gnome-klotski.png \
	16x16/gnome-mahjongg.png \
	16x16/gnome-mines.png \
	16x16/gnome-robots.png \
	16x16/gnome-samegnome.png \
	16x16/gnome-sudoku.png \
	16x16/gnome-tali.png \
	16x16/gnome-tetravex.png \
	$(NULL)

icons_22 = \
	22x22/gnome-aisleriot.png \
	22x22/gnome-blackjack.png \
	22x22/gnome-freecell.png \
	22x22/gnome-glchess.png \
	22x22/gnome-glines.png \
	22x22/gnome-gnect.png \
	22x22/gnome-gnibbles.png \
	22x22/gnome-gnometris.png \
	22x22/gnome-iagno.png \
	22x22/gnome-klotski.png \
	22x22/gnome-mahjongg.png \
	22x22/gnome-mines.png \
	22x22/gnome-robots.png \
	22x22/gnome-samegnome.png \
	22x22/gnome-sudoku.png \
	22x22/gnome-tali.png \
	22x22/gnome-tetravex.png \
	$(NULL)

icons_24 = \
	24x24/gnome-aisleriot.png \
	24x24/gnome-blackjack.png \
	24x24/gnome-freecell.png \
	24x24/gnome-glchess.png \
	24x24/gnome-glines.png \
	24x24/gnome-gnect.png \
	24x24/gnome-gnibbles.png \
	24x24/gnome-gnometris.png \
	24x24/gnome-iagno.png \
	24x24/gnome-klotski.png \
	24x24/gnome-mahjongg.png \
	24x24/gnome-mines.png \
	24x24/gnome-robots.png \
	24x24/gnome-samegnome.png \
	24x24/gnome-sudoku.png \
	24x24/gnome-tali.png \
	24x24/gnome-tetravex.png \
	$(NULL)

icons_26 = \
	26x26/gnome-aisleriot.png \
	$(NULL)

icons_32 = \
	32x32/gnome-aisleriot.png \
	32x32/gnome-blackjack.png \
	32x32/gnome-freecell.png \
	32x32/gnome-glchess.png \
	32x32/gnome-glines.png \
	32x32/gnome-gnect.png \
	32x32/gnome-gnibbles.png \
	32x32/gnome-gnometris.png \
	32x32/gnome-iagno.png \
	32x32/gnome-klotski.png \
	32x32/gnome-mahjongg.png \
	32x32/gnome-mines.png \
	32x32/gnome-robots.png \
	32x32/gnome-samegnome.png \
	32x32/gnome-sudoku.png \
	32x32/gnome-tali.png \
	32x32/gnome-tetravex.png \
	$(NULL)

icons_34 = \
	34x34/gnome-aisleriot.png \
	$(NULL)

icons_40 = \
	40x40/gnome-aisleriot.png \
	$(NULL)

icons_48 = \
	48x48/gnome-aisleriot.png \
	48x48/gnome-blackjack.png \
	48x48/gnome-freecell.png \
	48x48/gnome-glchess.png \
	48x48/gnome-glines.png \
	48x48/gnome-gnect.png \
	48x48/gnome-gnibbles.png \
	48x48/gnome-gnometris.png \
	48x48/gnome-iagno.png \
	48x48/gnome-klotski.png \
	48x48/gnome-mahjongg.png \
	48x48/gnome-mines.png \
	48x48/gnome-robots.png \
	48x48/gnome-samegnome.png \
	48x48/gnome-sudoku.png \
	48x48/gnome-tali.png \
	48x48/gnome-tetravex.png \
	$(NULL)

icons_50 = \
	50x50/gnome-aisleriot.png \
	$(NULL)

icons_64_54 = \
	64x54/gnome-aisleriot.png \
	$(NULL)

icons_svg = \
	scalable/gnome-aisleriot.svg \
	scalable/gnome-blackjack.svg \
	scalable/gnome-freecell.svg \
	scalable/gnome-glchess.svg \
	scalable/gnome-glines.svg \
	scalable/gnome-gnect.svg \
	scalable/gnome-gnibbles.svg \
	scalable/gnome-gnometris.svg \
	scalable/gnome-iagno.svg \
	scalable/gnome-klotski.svg \
	scalable/gnome-mahjongg.svg \
	scalable/gnome-mines.svg \
	scalable/gnome-robots.svg \
	scalable/gnome-samegnome.svg \
	scalable/gnome-sudoku.svg \
	scalable/gnome-tali.svg \
	scalable/gnome-tetravex.svg \
	scalable/gnome-lightsoff.svg \
	$(NULL)

private_icons = \
	hicolor_actions_scalable_cards-deal.svg \
	$(NULL)

if !HAVE_HILDON
private_icons += \
	hicolor_actions_24x24_teleport.png \
	hicolor_actions_24x24_teleport-random.png \
	$(NULL)
endif # !HAVE_HILDON

if HAVE_HILDON

iconcontext = hildon
icon16dir = $(datadir)/icons/hicolor/16x16/hildon
icon26dir = $(datadir)/icons/hicolor/26x26/hildon
icon34dir = $(datadir)/icons/hicolor/34x34/hildon
icon40dir = $(datadir)/icons/hicolor/40x40/hildon
icon50dir = $(datadir)/icons/hicolor/50x50/hildon
iconscalabledir = $(datadir)/icons/hicolor/scalable/hildon

icon16_DATA = $(icons_16)
icon26_DATA = $(icons_26)
icon34_DATA = $(icons_34)
icon40_DATA = $(icons_40)
icon50_DATA = $(icons_50)
iconscalable_DATA = $(icons_64_54)

else

icon16dir = $(datadir)/icons/hicolor/16x16/apps
icon22dir = $(datadir)/icons/hicolor/22x22/apps
icon24dir = $(datadir)/icons/hicolor/24x24/apps
icon32dir = $(datadir)/icons/hicolor/32x32/apps
icon48dir = $(datadir)/icons/hicolor/48x48/apps
iconscalabledir = $(datadir)/icons/hicolor/scalable/apps

icon16_DATA = $(icons_16)
icon22_DATA = $(icons_22)
icon24_DATA = $(icons_24)
icon32_DATA = $(icons_32)
icon48_DATA = $(icons_48)
iconscalable_DATA = $(icons_svg)

endif

EXTRA_DIST = \
	$(icons_16)	\
	$(icons_22)	\
	$(icons_24)	\
	$(icons_26)	\
	$(icons_32)	\
	$(icons_34)	\
	$(icons_40)	\
	$(icons_48)	\
	$(icons_50)	\
	$(icons_64_54)	\
	$(icons_svg)	\
	$(private_icons)\
	$(NULL)

gtk_update_icon_cache = gtk-update-icon-cache -f -t $(datadir)/icons/hicolor

install-private-icons:
	for icon in $(private_icons); do \
		THEME=`echo $$icon | cut -d_ -f1`; \
		CONTEXT=`echo $$icon | cut -d_ -f2`; \
		SIZE=`echo $$icon | cut -d_ -f3`; \
		ICONFILE=`echo $$icon | cut -d_ -f4`; \
		$(mkdir_p) $(DESTDIR)$(pkgdatadir)/icons/$$THEME/$$SIZE/$$CONTEXT; \
		$(INSTALL_DATA) $(srcdir)/$$icon $(DESTDIR)$(pkgdatadir)/icons/$$THEME/$$SIZE/$$CONTEXT/$$ICONFILE; \
	done

uninstall-private-icons:
	for icon in $(private_icons); do \
		THEME=`echo $$icon | cut -d_ -f1`; \
		CONTEXT=`echo $$icon | cut -d_ -f2`; \
		SIZE=`echo $$icon | cut -d_ -f3`; \
		ICONFILE=`echo $$icon | cut -d_ -f4`; \
		rm -f $(DESTDIR)$(pkgdatadir)/icons/$$THEME/$$SIZE/$$CONTEXT/$$ICONFILE; \
	done

install-data-local: install-private-icons
uninstall-local: uninstall-private-icons

install-data-hook: update-icon-cache
uninstall-hook: update-icon-cache
update-icon-cache:
	@-if test -z "$(DESTDIR)"; then \
		echo "Updating Gtk icon cache."; \
		$(gtk_update_icon_cache); \
	else \
		echo "*** Icon cache not updated.  After (un)install, run this:"; \
		echo "***   $(gtk_update_icon_cache)"; \
	fi
